# iotafarm

./: .gitignore  CMakeLists-External.txt  CMakeLists.txt  Makefile  main.c  seed_gen.h
libs/opencl/: CMakeLists.txt
src/: main.c  seed_gen.c
src/crypto/: converter.c  converter.h
